# lab4Working

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  simulate.resc  unity.cmake
.github/workflows/: main.yml
include/: fifo.h  signaling.h
src/: CMakeLists.txt  fifo.c  signaling.c
test/: CMakeLists.txt  hello_world.robot  test.c  test_fifo.c  test_signal.c
